--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/body-parser": "^1.19.0",
     "@types/mongoose": "^5.10.4",
+    "@types/multer": "^1.4.5",
     "body-parser": "^1.19.0",
     "date-fns": "^2.19.0",
     "express": "^4.17.1",
