--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "body-parser": "^1.19.0",
     "date-fns": "^2.19.0",
     "express": "^4.17.1",
-    "mongoose": "^5.12.2"
+    "mongoose": "^5.12.2",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
