--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/body-parser": "^1.19.0",
+    "@types/date-fns": "^2.6.0",
     "@types/mongoose": "^5.10.4",
     "@types/multer": "^1.4.5",
     "body-parser": "^1.19.0",
