--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.ts",
-    "build": "tsc --project ./"
+    "build": "tsc --project ./",
+    "start:db": "systemctl start mongod && systemctl status mongod",
+    "stop:db": "systemctl stop mongod && systemctl status mongod"
   },
   "keywords": [],
   "author": "",
