--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/multer": "^1.4.5",
     "body-parser": "^1.19.0",
     "date-fns": "^2.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.2",
     "multer": "^1.4.2"
