removed noImplicitANy false

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,6 @@
     "rootDir": "./",
     "outDir": "./build",
     "esModuleInterop": true, // compile ES6 to commonjs modules
-    "strict": true, // strict type-checking,
-    "noImplicitAny": false
+    "strict": true // strict type-checking,
   }
 }
