--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.ts",
+    "start": "node index.js",
     "build": "tsc --project ./",
     "db:start": "systemctl start mongod && systemctl status mongod",
     "db:stop": "systemctl stop mongod && systemctl status mongod"
